@@ -13,8 +13,7 @@ copyright_year   = 2013
 [MakeMaker]
 [InstallGuide]
 [AutoPrereqs]
-[Prereqs]
-perl = 5.010
+skip = feature
 [MetaJSON]
 [Repository]
 [Bugtracker]
